// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c1 {
  position: relative;
  overflow-y: scroll;
  height: 100%;
}

.c1:before {
  padding-bottom: calc(100% / (1 / 1));
  display: block;
  content: '';
}

.c1 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c1 > img {
  height: auto;
}

.c2 {
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c3 {
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c4 {
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  overflow: hidden;
}

<div
  className="sc-AxjAm c0"
>
  <div
    className="sc-AxjAm c1"
  >
    <svg
      preserveAspectRatio="none"
      viewBox="0 0 64 64"
    >
      <polygon
        className="sc-AxiKw c2"
        points="0,0 0,32 32,32"
      />
      <polygon
        className="sc-AxiKw c3"
        points="0,32 0,64 32,64"
      />
      <polygon
        className="sc-AxiKw c4"
        points="32,0 32,64 64,32"
      />
    </svg>
  </div>
</div>
`;

exports[`it works animated 1`] = `
.c1 {
  position: relative;
  overflow-y: scroll;
  height: 100%;
}

.c1:before {
  padding-bottom: calc(100% / (1 / 1));
  display: block;
  content: '';
}

.c1 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c1 > img {
  height: auto;
}

.c2 {
  -webkit-animation: dTTrEC;
  animation: dTTrEC;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c3 {
  -webkit-animation: fOlPOW;
  animation: fOlPOW;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c4 {
  -webkit-animation: kJzVPa;
  animation: kJzVPa;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-duration: 0.4s;
  animation-duration: 0.4s;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  overflow: hidden;
}

<div
  className="sc-AxjAm c0"
>
  <div
    className="sc-AxjAm c1"
  >
    <svg
      preserveAspectRatio="none"
      viewBox="0 0 64 64"
    >
      <polygon
        className="sc-AxiKw c2"
        points="0,0 0,32 32,32"
      />
      <polygon
        className="sc-AxiKw c3"
        points="0,32 0,64 32,64"
      />
      <polygon
        className="sc-AxiKw c4"
        points="32,0 32,64 64,32"
      />
    </svg>
  </div>
</div>
`;

exports[`it works thinking 1`] = `
.c1 {
  position: relative;
  overflow-y: scroll;
  height: 100%;
}

.c1:before {
  padding-bottom: calc(100% / (1 / 1));
  display: block;
  content: '';
}

.c1 > :first-child {
  position: absolute;
  object-fit: scale-down;
  object-position: 50% 50%;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
}

.c1 > img {
  height: auto;
}

.c2 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0;
  animation-delay: 0;
  fill: #72af5d;
}

.c3 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.1s;
  animation-delay: 0.1s;
  fill: #17a3a5;
}

.c4 {
  -webkit-animation: hzFDkX;
  animation: hzFDkX;
  -webkit-animation-duration: 0.8s;
  animation-duration: 0.8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0.2s;
  animation-delay: 0.2s;
  fill: #ebc764;
}

.c0 {
  overflow: hidden;
}

<div
  className="sc-AxjAm c0"
>
  <div
    className="sc-AxjAm c1"
  >
    <svg
      preserveAspectRatio="none"
      viewBox="0 0 64 64"
    >
      <polygon
        className="sc-AxiKw c2"
        points="0,0 0,32 32,32"
      />
      <polygon
        className="sc-AxiKw c3"
        points="0,32 0,64 32,64"
      />
      <polygon
        className="sc-AxiKw c4"
        points="32,0 32,64 64,32"
      />
    </svg>
  </div>
</div>
`;
